# irc

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/decision/lib/decision/: main_decision
install/decision/share/decision/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_fast_bulk_read.h  group_fast_sync_read.h  group_handler.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
install/dynamixel_sdk/share/ament_index/resource_index/package_run_dependencies/: dynamixel_sdk
install/dynamixel_sdk/share/ament_index/resource_index/parent_prefix_path/: dynamixel_sdk
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk/share/dynamixel_sdk/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  dynamixel_sdkConfig-version.cmake  dynamixel_sdkConfig.cmake
install/dynamixel_sdk/share/dynamixel_sdk/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.xml
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  dynamixel_sdk_custom_interfacesConfig-version.cmake  dynamixel_sdk_custom_interfacesConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/msg/: SetPosition.idl  SetPosition.msg
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/srv/: GetPosition.idl  GetPosition.srv  GetPosition_Request.msg  GetPosition_Response.msg
install/motion/share/motion/: package.dsv  package.ps1  package.sh
install/msgs/share/msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/msgs/share/msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_msgs__rosidl_generator_cExport.cmake  export_msgs__rosidl_generator_pyExport-noconfig.cmake  export_msgs__rosidl_generator_pyExport.cmake  msgsConfig-version.cmake  msgsConfig.cmake  msgs__rosidl_typesupport_cppExport-noconfig.cmake  msgs__rosidl_typesupport_cppExport.cmake  msgs__rosidl_typesupport_introspection_cExport.cmake  msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/msgs/share/msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/msgs/share/msgs/msg/: BallResult.idl  BallResult.msg  HurdleResult.msg  LineResult.idl  LineResult.msg
install/robot_bringup/lib/robot_bringup/: robot_bringup
install/robot_bringup/share/robot_bringup/: package.sh  package.xml
install/robot_bringup/share/robot_bringup/launch/: robot_bringup.py
log/: latest_build
src/decision/: package.xml  setup.cfg  setup.py
src/decision/decision/: main_decision.py
src/motion/: CMakeLists.txt  package.xml
src/motion/include/: callback.hpp  dynamixel.hpp  dynamixel_controller.hpp  main.hpp  sdk.hpp
src/motion/include/motion/: BRP_Kinematics.hpp  callback.hpp  dynamixel.hpp  dynamixel_controller.hpp
src/motion/src/: BRP_Kinematics.cpp  callback.cpp  dynamixel.cpp  dynamixel_controller.cpp  main.cpp  main_motion.cpp  sdk.cpp
src/msgs/: CMakeLists.txt
src/msgs/msg/: MotionEnd.msg
src/realsense-ros/: README.md
src/realsense-ros/.github/workflows/: main.yml  pre-release.yml
src/realsense-ros/realsense2_camera/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/realsense-ros/realsense2_camera/include/: base_realsense_node.h  constants.h
src/realsense-ros/realsense2_camera/src/: base_realsense_node.cpp  parameters.cpp  rs_node_setup.cpp  safety.cpp  sensor_params.cpp  tfs.cpp
src/realsense-ros/realsense2_camera/test/live_camera/: test_live_record_db3_play.py
src/realsense-ros/realsense2_camera/test/rosbag/: test_rosbag_db3_play_test.py
src/realsense-ros/realsense2_camera_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/realsense-ros/realsense2_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/realsense-ros/realsense2_rgbd_plugin/: CMakeLists.txt  package.xml
src/realsense-ros/realsense2_ros_mqtt_bridge/: CHANGELOG.rst  conftest.py  package.xml
src/realsense-ros/scripts/: check_package_deps.sh
src/robot_bringup/: setup.py
src/robot_bringup/config/: webcam_uncalibrated.yaml
src/robot_bringup/launch/: robot_bringup.py  robot_bringup_backup.txt  vision_stack.launch.py
src/vision/: CMakeLists.txt  HSV_CALIBRATION.md  package.xml
src/vision/config/: ball_hsv.yaml  hsv_profiles.yaml  settings.ini
src/vision/scripts/: ball_status_publisher.py  ball_vision_fusion.py  hoop_vision.py  hurdle_vision_fusion.py  line_status_publisher.py  realsense_ball_detector.py  realsense_debug_selector.py  realsense_hsv_calibrator.py  vision_status_monitor.py  yolo_detector.py
(+147 files in other folders)
